Removed old presets view

--- a/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
+++ b/XCode/DewertOkin/DewertOkin/RemoteControl/SecondRemote.storyboard
@@ -32,9 +32,6 @@
                                     <constraint firstAttribute="width" secondItem="0YV-jW-udd" secondAttribute="height" multiplier="1:1" priority="900" id="J32-lh-94W"/>
                                 </constraints>
                                 <state key="normal" title="Presets"/>
-                                <connections>
-                                    <segue destination="7U7-yR-P4u" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="edi-Vw-Fvw"/>
-                                </connections>
                             </button>
                             <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="chair_full_normal" translatesAutoresizingMaskIntoConstraints="NO" id="J9R-PK-aQG">
                                 <rect key="frame" x="10" y="120" width="394" height="577"/>
@@ -212,181 +209,10 @@
             </objects>
             <point key="canvasLocation" x="956.52173913043487" y="25.446428571428569"/>
         </scene>
-        <!--Presets Controller-->
-        <scene sceneID="xaU-ZF-daG">
-            <objects>
-                <viewController id="7U7-yR-P4u" customClass="PresetsController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="UA8-g2-fyu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="choose a preset" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qv0-SW-Iyx">
-                                <rect key="frame" x="50" y="94" width="314" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="27C-ET-t9u"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="FQT-1T-PTL"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccp-iL-o4J">
-                                <rect key="frame" x="20" y="164" width="374" height="678"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add your custom presets by clicking the &quot;+&quot;-Button" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nya-Uh-bVf">
-                                        <rect key="frame" x="50" y="300" width="274" height="41"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="nya-Uh-bVf" firstAttribute="leading" secondItem="ccp-iL-o4J" secondAttribute="leading" constant="50" id="dgG-wi-Yhw"/>
-                                    <constraint firstAttribute="bottom" secondItem="nya-Uh-bVf" secondAttribute="bottom" constant="337" id="m5O-43-uSq"/>
-                                    <constraint firstAttribute="trailing" secondItem="nya-Uh-bVf" secondAttribute="trailing" constant="50" id="oeQ-zJ-gf6"/>
-                                    <constraint firstItem="nya-Uh-bVf" firstAttribute="top" secondItem="ccp-iL-o4J" secondAttribute="top" constant="300" id="xki-vh-LC8"/>
-                                    <constraint firstItem="nya-Uh-bVf" firstAttribute="centerX" secondItem="ccp-iL-o4J" secondAttribute="centerX" id="z2o-oc-xkT"/>
-                                </constraints>
-                            </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYZ-ra-aut">
-                                <rect key="frame" x="182" y="762" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="1L2-dU-qd8"/>
-                                    <constraint firstAttribute="height" constant="50" id="KZd-7n-ynb"/>
-                                    <constraint firstAttribute="width" secondItem="AYZ-ra-aut" secondAttribute="height" multiplier="1:1" id="Ufw-DW-yi5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <state key="normal" title="+"/>
-                                <connections>
-                                    <segue destination="R1M-Df-ija" kind="custom" customClass="pullUpSegue" customModule="DewertOkin" customModuleProvider="target" id="r7J-NU-31I"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5sj-Z6-bkq">
-                                <rect key="frame" x="50" y="63" width="40" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="CBf-TV-GCA"/>
-                                    <constraint firstAttribute="height" constant="30" id="uJ5-2q-D6k"/>
-                                </constraints>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="backButtonPressed:" destination="R1M-Df-ija" eventType="touchUpInside" id="5LW-sa-kis"/>
-                                    <action selector="backButtonPressed:" destination="7U7-yR-P4u" eventType="touchUpInside" id="ILI-dU-eNT"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="5sj-Z6-bkq" firstAttribute="top" secondItem="Lsk-k0-a00" secondAttribute="top" constant="19" id="3jV-cZ-QmW"/>
-                            <constraint firstItem="Lsk-k0-a00" firstAttribute="trailing" secondItem="ccp-iL-o4J" secondAttribute="trailing" constant="20" id="5pj-xq-m1u"/>
-                            <constraint firstItem="ccp-iL-o4J" firstAttribute="top" secondItem="Qv0-SW-Iyx" secondAttribute="bottom" constant="20" id="8iy-gm-ZpH"/>
-                            <constraint firstItem="5sj-Z6-bkq" firstAttribute="leading" secondItem="Qv0-SW-Iyx" secondAttribute="leading" id="Pwq-z2-Fm2"/>
-                            <constraint firstItem="Lsk-k0-a00" firstAttribute="bottom" secondItem="ccp-iL-o4J" secondAttribute="bottom" constant="20" id="VBl-a6-NCG"/>
-                            <constraint firstItem="Qv0-SW-Iyx" firstAttribute="leading" secondItem="Lsk-k0-a00" secondAttribute="leading" constant="50" id="Y9d-18-n03"/>
-                            <constraint firstItem="AYZ-ra-aut" firstAttribute="centerX" secondItem="UA8-g2-fyu" secondAttribute="centerX" id="cjw-Ji-EV5"/>
-                            <constraint firstItem="Lsk-k0-a00" firstAttribute="trailing" secondItem="Qv0-SW-Iyx" secondAttribute="trailing" constant="50" id="eva-QO-lAN"/>
-                            <constraint firstItem="Lsk-k0-a00" firstAttribute="bottom" secondItem="AYZ-ra-aut" secondAttribute="bottom" constant="50" id="k0Q-XP-Mjc"/>
-                            <constraint firstItem="ccp-iL-o4J" firstAttribute="leading" secondItem="Lsk-k0-a00" secondAttribute="leading" constant="20" id="qHq-LC-6bp"/>
-                            <constraint firstItem="Qv0-SW-Iyx" firstAttribute="top" secondItem="Lsk-k0-a00" secondAttribute="top" constant="50" id="rtp-l5-u50"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="Lsk-k0-a00"/>
-                    </view>
-                    <connections>
-                        <outlet property="addPresetButton" destination="AYZ-ra-aut" id="VZs-SR-aLr"/>
-                        <outlet property="choosePresetLabel" destination="Qv0-SW-Iyx" id="Nje-Pc-4bi"/>
-                        <outlet property="scrollView" destination="ccp-iL-o4J" id="Ltn-ju-eGA"/>
-                        <outlet property="textLabel" destination="nya-Uh-bVf" id="QMw-0N-Gqt"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tds-zj-a6e" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="41" y="825"/>
-        </scene>
-        <!--Add Preset Controller-->
-        <scene sceneID="1AI-db-4FM">
-            <objects>
-                <viewController id="R1M-Df-ija" customClass="AddPresetController" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4bV-FG-PTD">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="add a name for your preset, bring your device into the desired position and pick a memoryslot your want it to be saved on" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEU-9y-Kq9">
-                                <rect key="frame" x="50" y="124" width="314" height="54"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UsJ-6q-wi0">
-                                <rect key="frame" x="30" y="74" width="40" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="QcJ-4P-iaF"/>
-                                    <constraint firstAttribute="width" constant="40" id="Yhe-oo-QfQ"/>
-                                </constraints>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <segue destination="7U7-yR-P4u" kind="custom" customClass="pullUpUnwindSegue" customModule="DewertOkin" customModuleProvider="target" id="NBl-g8-nGH"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3Ye-X0-sWD">
-                                <rect key="frame" x="0.0" y="198" width="414" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="LYv-zK-uGg"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QD5-ux-GQf">
-                                <rect key="frame" x="0.0" y="258" width="414" height="454"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Paw-SJ-IhB">
-                                <rect key="frame" x="167" y="762" width="80" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="BI8-Z9-H7m"/>
-                                    <constraint firstAttribute="height" constant="50" id="gjl-MR-yA4"/>
-                                </constraints>
-                                <state key="normal" title="Finished"/>
-                                <connections>
-                                    <segue destination="Hlx-Ed-2u2" kind="unwind" unwindAction="unwindFromAddPreset:" id="29J-p0-IH7"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="dEU-9y-Kq9" firstAttribute="leading" secondItem="cS5-HC-9Mg" secondAttribute="leading" constant="50" id="4uq-HL-7wq"/>
-                            <constraint firstItem="dEU-9y-Kq9" firstAttribute="top" secondItem="cS5-HC-9Mg" secondAttribute="top" constant="80" id="780-S8-vYq"/>
-                            <constraint firstItem="QD5-ux-GQf" firstAttribute="leading" secondItem="cS5-HC-9Mg" secondAttribute="leading" id="7gv-F9-GFW"/>
-                            <constraint firstItem="Paw-SJ-IhB" firstAttribute="centerX" secondItem="4bV-FG-PTD" secondAttribute="centerX" id="IPM-9L-vH7"/>
-                            <constraint firstItem="cS5-HC-9Mg" firstAttribute="bottom" secondItem="Paw-SJ-IhB" secondAttribute="bottom" constant="50" id="Mig-OO-tzl"/>
-                            <constraint firstItem="UsJ-6q-wi0" firstAttribute="top" secondItem="cS5-HC-9Mg" secondAttribute="top" constant="30" id="N8j-Vd-OlU"/>
-                            <constraint firstItem="cS5-HC-9Mg" firstAttribute="trailing" secondItem="QD5-ux-GQf" secondAttribute="trailing" id="Tzl-M7-hMR"/>
-                            <constraint firstItem="3Ye-X0-sWD" firstAttribute="leading" secondItem="cS5-HC-9Mg" secondAttribute="leading" id="VNy-aX-OA9"/>
-                            <constraint firstItem="Paw-SJ-IhB" firstAttribute="top" secondItem="QD5-ux-GQf" secondAttribute="bottom" constant="50" id="Wy3-4S-ZHY"/>
-                            <constraint firstItem="UsJ-6q-wi0" firstAttribute="leading" secondItem="cS5-HC-9Mg" secondAttribute="leading" constant="30" id="g8O-s6-kuw"/>
-                            <constraint firstItem="cS5-HC-9Mg" firstAttribute="trailing" secondItem="dEU-9y-Kq9" secondAttribute="trailing" constant="50" id="kYq-KQ-cRm"/>
-                            <constraint firstItem="QD5-ux-GQf" firstAttribute="top" secondItem="3Ye-X0-sWD" secondAttribute="bottom" constant="20" id="ogH-gD-73l"/>
-                            <constraint firstItem="cS5-HC-9Mg" firstAttribute="trailing" secondItem="3Ye-X0-sWD" secondAttribute="trailing" id="s8X-YM-Ceo"/>
-                            <constraint firstItem="3Ye-X0-sWD" firstAttribute="top" secondItem="dEU-9y-Kq9" secondAttribute="bottom" constant="20" id="yN0-dh-kaj"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="cS5-HC-9Mg"/>
-                    </view>
-                    <connections>
-                        <outlet property="buttonView" destination="QD5-ux-GQf" id="KJE-HG-Uw7"/>
-                        <outlet property="nameTextfield" destination="3Ye-X0-sWD" id="zWr-jU-l7s"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9ed-NC-ZLc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="Hlx-Ed-2u2" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="957" y="825"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="chair_full_normal" width="1001.280029296875" height="779"/>
+        <image name="chair_full_normal" width="1099.199951171875" height="854.4000244140625"/>
         <image name="chair_normal_arrows" width="1001.280029296875" height="779"/>
         <image name="remote_icon" width="30" height="30"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="edi-Vw-Fvw"/>
-    </inferredMetricsTieBreakers>
 </document>
